2000-04-09  Gerd Moellmann  <gerd@gnu.org>

	* mail/rfc2368.el: Correct author's email address.

	* progmodes/ebrowse.el: New file.

	* emacs-lisp/easymenu.el (easy-menu-create-menu): Process menu
	item help string.
	(easy-menu-do-add-item): Ditto.
	(easy-menu-define): Extend doc string.

	* jit-lock.el (with-buffer-unmodified): Use
	restore-buffer-modified-p.
	(with-buffer-prepared-for-font-lock): Use with-buffer-unmodified.
	(jit-lock-function, jit-lock-stealth-fontify): Don't use
	with-buffer-unmodified.

2000-04-08  Dave Love  <fx@gnu.org>

	* emacs-lisp/edebug.el: Fix specs for dolist, dotimes, push, pop,
	unless, when.

2000-04-07  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* viper-util.el (viper-put-on-search-overlay): New subroutine.
	(viper-flash-search-pattern): No operation when using Emacs
	doesn't support face. 
	Use `viper-put-on-search-overlay'.
	
2000-04-04  Gerd Moellmann  <gerd@gnu.org>

	* isearch.el (isearch-mode-map): Define M-C-s like C-s and M-C-r
	like C-r.

	* progmodes/make-mode.el: Some doc fixes.
	(makefile-mode-abbrev-table): New variable.
	(makefile-mode): Set local abbrev table to makefile-mode-abbrev-table.
	(makefile-font-lock-keywords): Fontify includes and conditionals.
	(toplevel): Require `dabbrev' and `add-log' when compiling.

	* replace.el (perform-replace): Don't move forward one char
	when MATCH-AGAIN is nil, and REGEXP-FLAG is t.  We don't want
	to do that because it leaves point 1 position after the last
	replacement, after everything has been replaced.

	* jit-lock.el (with-buffer-unmodified): New macro.
	(with-buffer-prepared-for-font-lock): Don't preserve buffer's
	modified state.
	(jit-lock-function-1): Extracted from jit-lock-function; not
	preserving buffer's modified state.
	(jit-lock-function, jit-lock-stealth-fontify): Call
	jit-lock-function-1.

	* mail/rfc2368.el: Remove supernumerary copyright line.

2000-04-04  Milan Zamazal  <pdm@freesoft.cz>
