@@ -4876,9 +4876,15 @@ It returns the old style symbol." t nil)
 
 ;;;### (autoloads (ebrowse-save-tree-as ebrowse-tags-query-replace
 ;;;;;;  ebrowse-tags-loop-continue ebrowse-tags-complete-symbol ebrowse-electric-choose-tree
-;;;;;;  ebrowse-tree-mode) "ebrowse" "progmodes/ebrowse.el" (14575
-;;;;;;  54558))
+;;;;;;  ebrowse-tree-mode ebrowse-load) "ebrowse" "progmodes/ebrowse.el"
+;;;;;;  (14576 57912))
 ;;; Generated autoloads from progmodes/ebrowse.el
+
+(autoload (quote ebrowse-load) "ebrowse" "\
+Load an Ebrowse file FILE into memory and make a tree buffer.
+Optional SWITCH non-nil means switch to the tree buffer afterwards.
+This function is normally called from a `find-file-hook'.
+Value is the tree buffer created." nil nil)
 
 (autoload (quote ebrowse-tree-mode) "ebrowse" "\
 Major mode for Ebrowse class tree buffers.
@@ -4908,6 +4914,19 @@ With prefix arg, process files of marked classes only." t nil)
 Write the current tree data structure to a file.
 Read the file name from the minibuffer if interactive.
 Otherwise, FILE-NAME specifies the file to save the tree in." t nil)
+
+;;;***
+
+;;;### (autoloads (ebrowse-find-file-hook-fn) "ebrowse-ffh" "progmodes/ebrowse-ffh.el"
+;;;;;;  (14576 58508))
+;;; Generated autoloads from progmodes/ebrowse-ffh.el
+
+(autoload (quote ebrowse-find-file-hook-fn) "ebrowse-ffh" "\
+Function installed on `find-file-hooks'.
+Load an Ebrowse class tree when there's special signature at
+the beginning of the file." nil nil)
+
+(add-hook (quote find-file-hooks) (quote ebrowse-find-file-hook-fn))
 
 ;;;***
 
@@ -6564,6 +6583,22 @@ Find directly the function at point in the other window." t nil)
 
 (autoload (quote find-function-setup-keys) "find-func" "\
 Define some key bindings for the find-function family of functions." nil nil)
+
+;;;***
+
+;;;### (autoloads (finder-by-keyword finder-commentary finder-list-keywords)
+;;;;;;  "finder" "finder.el" (14576 32883))
+;;; Generated autoloads from finder.el
+
+(autoload (quote finder-list-keywords) "finder" "\
+Display descriptions of the keywords in the Finder buffer." t nil)
+
+(autoload (quote finder-commentary) "finder" "\
+Display FILE's commentary section.
+FILE should be in a form suitable for passing to `locate-library'." t nil)
+
+(autoload (quote finder-by-keyword) "finder" "\
+Find packages matching a given keyword." t nil)
 
 ;;;***
 
